5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1723_2496.log
== TEST (2019-05-09 10:06:05) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:07:32) 
-- CODE:
soma = 0

num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:11:34) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	soma = soma + num
	
	print(soma)	
# Inputs seguintes
num = int(input("Digite um numero: "))

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:13:27) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	soma = soma + num
	print(soma)	
if (num <= -1):
	# Inputs seguintes
num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 10
    num = int(input())
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:13:33) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	soma = soma + num
	print(soma)	
if (num <= -1):
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 10
    num = int(input())
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:16:43) 
-- CODE:
soma = 0
num = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1 and num < -1):
	soma = soma + num
	print(soma)	
if (num <= -1):
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 10
    num = int(input())
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:21:12) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	print(soma)	
if (num == -1):
	print(soma)

-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:22:05) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:22:16) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))1
if (num == -1):
	print(soma)

-- ERROR:
File "XXXX", line 9
    num = int(input())1
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:22:20) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))1
if (num == -1):
	print(soma)

-- EXECUTION TIME:
0.851759
-- ERROR:
  File "/home/codebench/codes/1723/2496/main.py", line 9
    num = int(input())1
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:23:06) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))1
if (num == -1):
	print(soma)

-- ERROR:
File "XXXX", line 9
    num = int(input())1
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:23:15) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- EXECUTION TIME:
0.665559
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:30:03) 
-- CODE:
soma = 0
num = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > -1):
	soma = soma + num
	print(soma)	
if (num <= -1):
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.192529
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Digite um numero: Digite um numero: Digite um numero: Digite um numero: 32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:33:09) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	print(soma)	
if (num == -1):
	print(soma)

-- EXECUTION TIME:
685.534
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:46:48) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- EXECUTION TIME:
0.035454
-- ERROR:
Error response from daemon: Container 4714b7d1eefff54e82f60cd220e30d84593368db8ad7ed0c4c2e5220692fa38c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:46:49) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- EXECUTION TIME:
0.033766
-- ERROR:
Error response from daemon: Container 4714b7d1eefff54e82f60cd220e30d84593368db8ad7ed0c4c2e5220692fa38c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:47:19) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:48:17) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:48:25) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- EXECUTION TIME:
0.0357029
-- ERROR:
Error response from daemon: Container 4714b7d1eefff54e82f60cd220e30d84593368db8ad7ed0c4c2e5220692fa38c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:48:26) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:48:28) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- EXECUTION TIME:
0.0282369
-- ERROR:
Error response from daemon: Container 4714b7d1eefff54e82f60cd220e30d84593368db8ad7ed0c4c2e5220692fa38c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:48:55) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:49:20) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- EXECUTION TIME:
0.0350521
-- ERROR:
Error response from daemon: Container 4714b7d1eefff54e82f60cd220e30d84593368db8ad7ed0c4c2e5220692fa38c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:49:22) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:49:40) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:49:44) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- EXECUTION TIME:
0.0282781
-- ERROR:
Error response from daemon: Container 4714b7d1eefff54e82f60cd220e30d84593368db8ad7ed0c4c2e5220692fa38c is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:54:15) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:54:16) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	soma = soma + num
	cont = cont + 1 
	num = int(input("Digite um numero: "))
if (num == -1):
	print(soma)

-- EXECUTION TIME:
0.13273
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:59:08) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n != -1):
	i = i + 1
	soma = soma + n
	print(i)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:01:23) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	i = i + 1
	soma = soma + n
	print(i)
	n = int(input("Digite um numero: "))
if (n == -1):
	print(soma)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:01:27) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	i = i + 1
	soma = soma + n
	print(soma)
	n = int(input("Digite um numero: "))
if (n == -1):
	print(soma)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:01:49) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	n = int(input("Digite um numero: "))
	i = i + 1
	soma = soma + n
	print(soma)
if (n == -1):
	print(soma)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:02:03) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	n = int(input("Digite um numero: "))
	i = i + 1
	soma = soma + n
	print(soma)
if (n == -1):
	print(soma)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:02:20) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	n = int(input("Digite um numero: "))
	i = i + 1
	soma = soma + n
print(soma)
if (n == -1):
	print(soma)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:02:37) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	n = int(input("Digite um numero: "))
	i = i + 1
	soma = soma + n
print(soma)
if (n == -1):
	print(soma)
-- EXECUTION TIME:
0.30561
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
-1
-1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
21700
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:02:48) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	n = int(input("Digite um numero: "))
	i = i + 1
	soma = soma + n
print(soma)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:02:58) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	n = int(input("Digite um numero: "))
	i = i + 1
	soma = soma + n
print(soma)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:03:03) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	n = int(input("Digite um numero: "))
	i = i + 1
	soma = soma + n
print(soma)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:03:22) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	n = int(input("Digite um numero: "))
	i = i + 1
	soma = soma + n
print(soma)

-- EXECUTION TIME:
0.163736
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
-1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
21700
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:04:03) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	n = int(input("Digite um numero: "))
	i = i + 1
	soma = soma + n
print(soma)
	if (n==-1):
		print(soma)
-- ERROR:
File "XXXX", line 10
    if (n==-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:49:40) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n > -1):
	n = int(input("Digite um numero: "))
	i = i + 1
	soma = soma + n
print(soma)
if (n==-1):
	print(soma)
-- ERROR:
File "XXXX", line 10
    if (n==-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:50:38) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n != -1):
	n = int(input("Digite um numero: "))
	i = i + 1
	soma = soma + n
print(soma)
if (n==-1):
	print(soma)
-- OUTPUT:
1398
1398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:51:53) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n != -1):	
	i = i + 1
	soma = soma + n
	n = int(input("Digite um numero: "))	

if (n==-1):
	print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:51:57) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n != -1):	
	i = i + 1
	soma = soma + n
	n = int(input("Digite um numero: "))	

if (n==-1):
	print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:52:02) 
-- CODE:
n = int(input("Digite um numero: "))

i = 0 
soma = 0 
while (n != -1):	
	i = i + 1
	soma = soma + n
	n = int(input("Digite um numero: "))	

if (n==-1):
	print(soma)
-- EXECUTION TIME:
0.154748
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
